force-app/main/default/objects/pymts__Transaction_Line_Item__c/fields/pymts__Description__c.field-meta.xml
<CustomField>
    <fullName>pymts__Description__c</fullName>
    <label>Description</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional line item description or notes</description>
    <inlineHelpText>Additional description for this line item</inlineHelpText>
</CustomField>