force-app/main/default/objects/pymts__Transaction_Line_Item__c/fields/pymts__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pymts__Quantity__c</fullName>
    <label>Quantity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <required>true</required>
    <defaultValue>1</defaultValue>
    <description>Quantity of the product purchased</description>
    <inlineHelpText>Number of units purchased</inlineHelpText>
</CustomField>