force-app/main/default/objects/pymts__Transaction_Line_Item__c/fields/pymts__Total_Price__c.field-meta.xml
<CustomField>
    <fullName>pymts__Total_Price__c</fullName>
    <label>Total Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>pymts__Quantity__c * pymts__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Calculated total: Quantity x Unit Price</description>
    <inlineHelpText>Line item total (Quantity × Unit Price)</inlineHelpText>
</CustomField>