force-app/main/default/objects/pymts__Transaction_Line_Item__c/fields/pymts__Transaction__c.field-meta.xml
<CustomField>
    <fullName>pymts__Transaction__c</fullName>
    <label>Transaction</label>
    <type>MasterDetail</type>
    <referenceTo>pymts__Transaction__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Parent transaction record</description>
</CustomField>